--- a/keyboard/key.css
+++ b/keyboard/key.css
@@ -32,9 +32,7 @@ body {
 
   /* background-color: rgba(30, 29, 29, 0.709); */
 }
-.keyboard:hover {
-  background-color: rgb(81, 78, 75);
-}
+
 .item1,
 .item2 {
   cursor: pointer;
@@ -44,18 +42,27 @@ body {
   margin: 10px;
   display: inline-block;
   width: 70px;
-  /* color: white; */
+  color: white;
   border: 0;
   height: 70px;
   border-radius: 10px;
   text-align: center;
+  background-color: rgba(0, 0, 0, 0.947);
   line-height: 70px;
   font-size: 30px;
 }
 .active:hover {
+  border-radius: 10px;
   color: yellow;
+  box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px,
+    rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px,
+    rgba(240, 46, 170, 0.05) 25px 25px;
+  /* background-color: rgba(176, 169, 169, 0.324); */
+  
 }
 .active::after {
-  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset,
-    rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+  border-radius: 10px;
+  color: yellow;
+
+  background-color: rgba(176, 169, 169, 0.324);
 }
